# Low-Latency-Video-Inference-Pipeline-for-2D-Object-Detection

./: CMakeLists.txt  README.md  bdd100k_classes.txt
include/: YOLO11-OBB.hpp
model/: yolov11_train_BDD100K_dataset.ipynb  yolov11_train_BDD100K_dataset_old.ipynb
src/: video_inference.cpp
